# php_ffi

./: .gitignore  Makefile  composer.json  osx_librlib.dylib
async_example/: example.php  rlib.h
clib/: lib.dylib  main.c
examples/async/: Cargo.toml  exampleTest.php
examples/call_c_func/: example.h  exampleTest.php  main.c
examples/call_rust_func/: Cargo.toml  example.h  exampleTest.php
examples/call_rust_func/src/: lib.rs
examples/export_php/: exampleTest.php
php/: foo.php
rlib/: Cargo.toml  rlib.h
rlib/src/: lib.rs
