[package]
name = "rlib"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2018"

[lib]
name = "example"
crate-type = ["dylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"
lazy_static = "*"
futures = "0.3.1"
rand = "*"